# Luogu

./: .gitignore  CMakeLists.txt  README.md
AC/: B3637.cpp  Luogu_P_1055.cpp  Luogu_P_1095.cpp  Luogu_P_1802.cpp  Luogu_P_5662.cpp  Luogu_P_8891.cpp  P1000.cpp  P1018.cpp  P1030.cpp  P1036.cpp  P1048.cpp  P1051.cpp  P1057.cpp  P1067.cpp  P1073.cpp  P1085.cpp  P1087.cpp  P1090.cpp  P1091.cpp  P1119.cpp  P1151.cpp  P1164.cpp  P1244.cpp  P1339.cpp  P1352.cpp  P1427.cpp  P1440.cpp  P1471.cpp  P1478.cpp  P1486.cpp  P1540.cpp  P1551.cpp  P1601.cpp  P1628.cpp  P1629.cpp  P1739.cpp  P1765.cpp  P1775.cpp  P1832.cpp  P1972.cpp  (+33 more)
WA/: P1049.cpp
WIP/: Luogu_P_1122.cpp  P1002.cpp  P1003.cpp  P1055.cpp  P1091.cpp  P1111.cpp  P1122.cpp  P1130.cpp  P1197.cpp  P1396.cpp  P1469.cpp  P1478.cpp  P1486.cpp  P1507.cpp  P1629.cpp  P1877.cpp  P2078.cpp  P2118.cpp  P2256.cpp  P2298.cpp  P2362.cpp  P2548.cpp  P2639.cpp  P3387.cpp  P3865.cpp  P4306.cpp  P7869.cpp  P7870.cpp  SP3267.cpp
contest/CSP-J 2023 Simulation/: T1.cpp
