cmake_minimum_required(VERSION 3.23)
project(Luogu)

set(CMAKE_CXX_STANDARD 14)

add_executable(Luogu
        AC/P1000.cpp
        AC/P1018.cpp
        AC/P1030.cpp
        AC/P1036.cpp
        AC/P1048.cpp
        AC/P1051.cpp
        AC/P1067.cpp
        AC/P1085.cpp
        AC/P1087.cpp
        AC/P1090.cpp
        AC/P1427.cpp
        AC/P1440.cpp
        AC/P1540.cpp
        AC/P1551.cpp
        AC/P1601.cpp
        AC/P1628.cpp
        AC/P1765.cpp
        AC/P1832.cpp
        AC/P1980.cpp
        AC/P1981.cpp
        AC/P2068.cpp
        AC/P2142.cpp
        AC/P2251.cpp
        AC/P2256.cpp
        AC/P2580.cpp
        AC/P2689.cpp
        AC/P2952.cpp
        AC/P3165.cpp
        AC/P3887.cpp
        AC/P3926.cpp
        AC/P3955.cpp
        AC/P5015.cpp
        AC/P5412.cpp
        AC/P5514.cpp
        AC/P5733.cpp
        AC/P5734.cpp
        AC/P5735.cpp
        AC/P5744.cpp
        AC/P7910.cpp
        WA/P1049.cpp
        WIP/P1002.cpp
        WIP/P1055.cpp
        WIP/P1111.cpp
        WIP/P1469.cpp
        WIP/P1507.cpp
        WIP/P1629.cpp
        WIP/P1877.cpp
        WIP/P2078.cpp
        WIP/P2118.cpp
        WIP/P2298.cpp
        WIP/P2548.cpp
        WIP/P2639.cpp
        WIP/P7869.cpp
        WIP/P7870.cpp)

add_executable(P1130 WIP/P1130.cpp)
add_executable(P2362 WIP/P2362.cpp)
add_executable(P1164 AC/P1164.cpp)
add_executable(P1244 AC/P1244.cpp)